--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+ArnoldiMethod = "ec485272-7323-5ecc-a04f-4719b315124d"
 CacheVariables = "9a355d7c-ffe9-11e8-019f-21dae27d1722"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
