--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,3 @@
-# remote_theme: pages-themes/architect@v0.2.0
-# plugins:
-# - jekyll-remote-theme # add this line to the plugins list if you already have one
-
-title: "Biomolecular Identification - Mass Spectrometry"
-description: "Biological Agent Identification using Machine Learning Algorithms on Mass Spectral Data"
-remote_theme: pages-themes/architect@v0.2.0
-# Enable custom SCSS
-sass:
-  style: compressed
-  load_paths:
-    - _sass
+remote_theme: pages-themes/slate@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
